@@ -2,7 +2,7 @@
 
 <!DOCTYPE MODE SYSTEM "xmode.dtd">
 
-<!-- AWK mode, by Matthias Schneider -->
+<!-- AWK mode, by Matthias M. Schneider -->
 <MODE>
 	<PROPS>
 		<PROPERTY NAME="indentOpenBrackets" VALUE="{" />
@@ -50,12 +50,14 @@
 			<KEYWORD1>do</KEYWORD1>
 			<KEYWORD1>else</KEYWORD1>
 			<KEYWORD1>exit</KEYWORD1>
+			<KEYWORD1>fflush</KEYWORD1>
 			<KEYWORD1>for</KEYWORD1>
 			<KEYWORD1>huge</KEYWORD1>
 			<KEYWORD1>if</KEYWORD1>
 			<KEYWORD1>in</KEYWORD1>
 			<KEYWORD1>function</KEYWORD1>
 			<KEYWORD1>next</KEYWORD1>
+			<KEYWORD1>nextfile</KEYWORD1>
 			<KEYWORD1>print</KEYWORD1>
 			<KEYWORD1>printf</KEYWORD1>
 			<KEYWORD1>return</KEYWORD1>
@@ -64,6 +66,7 @@
 			<KEYWORD2>atan2</KEYWORD2>
 			<KEYWORD2>cos</KEYWORD2>
 			<KEYWORD2>exp</KEYWORD2>
+			<KEYWORD2>gensub</KEYWORD2>
 			<KEYWORD2>getline</KEYWORD2>
 			<KEYWORD2>gsub</KEYWORD2>
 			<KEYWORD2>index</KEYWORD2>
@@ -85,23 +88,28 @@
 
 			<KEYWORD3>BEGIN</KEYWORD3>
 			<KEYWORD3>END</KEYWORD3>
-			<KEYWORD3>FILENAME</KEYWORD3>
-			<KEYWORD3>FS</KEYWORD3>
-			<KEYWORD3>NF</KEYWORD3>
-			<KEYWORD3>NR</KEYWORD3>
-			<KEYWORD3>OFS</KEYWORD3>
-			<KEYWORD3>ORS</KEYWORD3>
-			<KEYWORD3>RS</KEYWORD3>
 			<KEYWORD3>$0</KEYWORD3>
 			<KEYWORD3>ARGC</KEYWORD3>
+			<KEYWORD3>ARGIND</KEYWORD3>
 			<KEYWORD3>ARGV</KEYWORD3>
-			<KEYWORD3>FNR</KEYWORD3>
-			<KEYWORD3>OFMT</KEYWORD3>
-			<KEYWORD3>RSTART</KEYWORD3>
-			<KEYWORD3>RLENGTH</KEYWORD3>
-			<KEYWORD3>SUBSEP</KEYWORD3>
+			<KEYWORD3>CONVFMT</KEYWORD3>
 			<KEYWORD3>ENVIRON</KEYWORD3>
+			<KEYWORD3>ERRNO</KEYWORD3>
+			<KEYWORD3>FIELDSWIDTH</KEYWORD3>
+			<KEYWORD3>FILENAME</KEYWORD3>
+			<KEYWORD3>FNR</KEYWORD3>
+			<KEYWORD3>FS</KEYWORD3>
 			<KEYWORD3>IGNORECASE</KEYWORD3>
+			<KEYWORD3>NF</KEYWORD3>
+			<KEYWORD3>NR</KEYWORD3>
+			<KEYWORD3>OFMT</KEYWORD3>
+			<KEYWORD3>OFS</KEYWORD3>
+			<KEYWORD3>ORS</KEYWORD3>
+			<KEYWORD3>RLENGTH</KEYWORD3>
+			<KEYWORD3>RS</KEYWORD3>
+			<KEYWORD3>RSTART</KEYWORD3>
+			<KEYWORD3>RT</KEYWORD3>
+			<KEYWORD3>SUBSEP</KEYWORD3>
 		</KEYWORDS>
 	</RULES>
 </MODE>
